# iris_backend

./: .env.example  .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  Test.http  config.example.yaml  rustfmt.toml
docker/: Dockerfile
src/: main.rs
src/argument_parser/: mod.rs
src/config/: data.rs  interface_creator.rs  load_config_file.rs  load_environment.rs  mod.rs
src/data/: app_state.rs  config.rs  defaults.rs  ml_engines.rs  mod.rs  op_codes.rs  pipeline.rs
src/data/web/: info.rs  mod.rs  websocket.rs
src/dns/: mod.rs  multicast_advertiser.rs
src/helper/: audio.rs  image.rs
src/ml_engines/: mod.rs
src/ml_engines/helper_functions/: system_prompts.rs
src/ml_engines/interfaces/: llm_interface.rs  mod.rs  ocr_interface.rs  stt_interface.rs  tts_interface.rs
src/ml_engines/ollama/: mod.rs  ollama_llm_adapter.rs  ollama_ocr_adapter.rs
src/ml_engines/openai/: mod.rs  openai_llm_adapter.rs  openai_ocr_adapter.rs  openai_stt_adapter.rs  openai_tts_adapter.rs
src/pipeline/: mod.rs  pipeline.rs
src/web/: info.rs
src/web/websocket/: handler.rs  mod.rs
