[package]
name = "iris_backend"
version = "0.0.1"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
ollama-rs = "0.3.4"
async-openai = { version = "0.35.0", features = ["_api", "response-types", "responses", "audio", "chat-completion"] }
rust-yaml = "0.0.5"
serde_json = "1.0.149"
log = "0.4.29"
clap = { version = "4.6.0", features = ["derive"] }
mdns-sd = "0.19.0"
serde = { version = "1.0.228", features = ["derive"] }
actix-ws = "0.4.0"
futures-util = "0.3.32"
url = "2.5.8"
base64 = "0.22.1"
async-trait = "0.1.89"
tokio = "1.51.1"
bytes = "1.11.1"
env_logger = "0.11.10"
pipeline = "0.5.0"
