[package]
name = "iris_backend"
version = "0.0.1"
edition = "2024"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
actix-web = { version = "4.13.0", features = ["openssl"] }
ollama-rs = { version = "0.3.4", features = ["stream"] }
async-openai = { version = "0.38.0", features = ["_api", "response-types", "responses", "audio", "chat-completion"] }
rust-yaml = "0.0.5"
serde_json = "1.0.149"
log = "0.4.29"
clap = { version = "4.6.0", features = ["derive"] }
mdns-sd = "0.19.0"
serde = { version = "1.0.228", features = ["derive"] }
actix-ws = "0.4.0"
futures-util = "0.3.32"
url = "2.5.8"
base64 = "0.22.1"
async-trait = "0.1.89"
tokio = "1.51.1"
bytes = "1.11.1"
env_logger = "0.11.10"